modified readme and test file
